--- a/D23/testing.ipynb
+++ b/D23/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "fe49ab00",
    "metadata": {},
    "outputs": [],
@@ -702,6 +702,34 @@
     "    plt.title(f\"{df[\"H\"][0]}\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72230a94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ab plane\n",
+    "data300mK = [6.1,4.7,2.3,1.7,1.3]\n",
+    "data600mk = [5.5,3.7,2.1,1.5,1.3]\n",
+    "data900mK = [4.7,1.9,1.5]\n",
+    "data1200mK = [3.3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ea25e73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# along c\n",
+    "data300mK = [1.1,1.6,3.1]\n",
+    "data600mK = [0.9,1.3,3.1]\n",
+    "data900mK = [0.7,0.9,3.1]\n",
+    "data1200mK = [1.1,2.7]"
    ]
   }
  ],
